# sigmaforge

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  dogfood.sh  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/comiset/: attack_data_technique_map.json  technique_map.json
data/mappings/: comiset.yaml
reports/: compile_loaded_summary.json  finding_service_tampering.md  first_run.md  run2.md  run3.md  run3_manifest.json  run4.md  run4_manifest.json  run5.md  run5_manifest.json  run6.md  run6_manifest.json  run7.md  run7_manifest.json  run7_pull_progress.json  run_manifest.json
scripts/: build_attack_data_corpus.py  build_benign_sample.py  build_nextron_benign.py  build_optc_benign.py  build_technique_map.py  compile_loaded_ruleset.py  count_attack_pc.py  floor_recommendation.py  pull_optc_fullweek.py  run2_backtest.py  run3_backtest.py  run4_backtest.py  run5_backtest.py  run6_backtest.py  run7_backtest.py  run_first_backtest.py  setup_engine.sh  spike_a1.py
scripts/selfgen/: README.md  normal_workday.ps1
sigmaforge/: MANUAL.md  banner.py  config.py  detect.py  main.py  orchestrate.py  pipeline.py  provenance.py  records.py  runmanifest.py
sigmaforge/backtest/: runner.py
sigmaforge/crosscheck/: chainsaw.py
sigmaforge/ingest/: chunker.py  compile.py  ruleload.py  zircolite_runner.py
sigmaforge/report/: render.py
sigmaforge/score/: acceptance.py  adapter.py  coverage.py  gates.py  recall.py  scorer.py
tests/: conftest.py  test_acceptance.py  test_attack_data_corpus.py  test_chunker.py  test_cli.py  test_compile.py  test_config_backtest.py  test_coverage.py  test_crosscheck.py  test_detect.py  test_gates.py  test_golden.py  test_honesty_integration.py  test_manifest.py  test_optc_benign.py  test_orchestrate.py  test_packaging.py  test_pipeline.py  test_provenance.py  test_recall.py  test_records.py  test_render.py  test_report.py  test_ruleload.py  test_runner.py  test_scorer.py  test_smoke_pipeline.py  test_zircolite_runner.py
(+9 files in other folders)
