[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmaforge"
version = "0.2.0"
description = "Honest Sigma-rule backtest harness"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Christian Huhn", email = "duathron@gmail.com" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "shipwright-kit>=0.8.0",  # PyPI release (PyPI rejects git+ direct-URL deps)
]

[tool.shipwright]
preset = "security"

[project.scripts]
sigmaforge = "sigmaforge.main:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8", "pre-commit>=4.0", "hypothesis>=6.0"]
# Deps the corpus-building / backtest SCRIPTS need (not the shipped library). The
# Zircolite engine itself + its own requirements are installed by scripts/setup_engine.sh.
# Install with: uv sync --group backtest
backtest = ["pyyaml>=6.0", "evtx>=0.6.2", "gdown>=5.2"]

[tool.setuptools.packages.find]
include = ["sigmaforge*"]

[tool.ruff]
extend = "tooling/ruff-base.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
